Sat, Jan 31, 2008
---------------------------------------------------------------------
- [Create new task] and [Assign new task] forms now save/restore their display state.
- Implemented task filtering for all three views.
- Added completion checkboxes and created initial implementation.

Fri, Jan 30, 2008
---------------------------------------------------------------------
- Ruby 1.9.1 final was released today!
- Added new named scopes to support assignments and completed tasks.
- Added sidebar filters for completed tasks.
- Added CSS styles for single-line lists and redesigned task templates.

Thu, Jan 29, 2008
---------------------------------------------------------------------
- Unpacked gem dependencies to /vendor/gems (ruby-openid, haml, and faker).
- Check whether database connection is available in [uses_mysql_uuid] plugin.
- Made task filters work for pending and assigned tasks.

Wed, Jan 28, 2008
---------------------------------------------------------------------
- Implemented task selector to switch between pending, assigned, and completed tasks.
- Major overhaul of task templates to support three task views.
- Changed rake's namespace from [app] to [crm].

Tue, Jan 27, 2008
---------------------------------------------------------------------
- Added sidebar tasks filtering by due date.
- Added CSS styles for selector control.
- Added prototype selector control for tasks.

Mon, Jan 26, 2008
---------------------------------------------------------------------
- Added support for inline forms and added [Create New Task] form.
- Updated task named scopes to evaluate them on each request rather than on server startup.

Sun, Jan 25, 2008
---------------------------------------------------------------------
- Added task categories and due dates to system settings.
- Completed first implementation of Tasks index page.

Sat, Jan 24, 2008
---------------------------------------------------------------------